# internal/delivery/http/handler/auth_handler.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"net/http"
 
+	entity "home-market/internal/domain"
 	service "home-market/internal/service/postgresql"
 
 	"github.com/gin-gonic/gin"
@@ -18,38 +19,41 @@ func NewAuthHandler(authService *service.AuthService) *AuthHandler {
 }
 
 func (h *AuthHandler) Register(c *gin.Context) {
-	var req struct {
-		Username string `json:"username" binding:"required"`
-		Email    string `json:"email"    binding:"required,email"`
-		FullName string `json:"fullName" binding:"required"`
-		Password string `json:"password" binding:"required,min=6"`
-	}
+    var req struct {
+        Username string `json:"username" binding:"required"`
+        Email  string `json:"email"  binding:"required,email"`
+        FullName string `json:"fullName" binding:"required"`
+        Password string `json:"password" binding:"required,min=6"`
+    }
 
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request", "detail": err.Error()})
-		return
-	}
+    if err := c.ShouldBindJSON(&req); err != nil {
+        c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request", "detail": err.Error()})
+        return
+    }
 
-	input := service.RegisterInput{
-		Username: req.Username,
-		Email:    req.Email,
-		FullName: req.FullName,
-		Password: req.Password,
-	}
+    // Buat struct value
+    input := entity.RegisterInput{
+        Username: req.Username,
+        Email:  req.Email,
+        FullName: req.FullName,
+        Password: req.Password,
+    }
 
-	userResp, err := h.authService.Register(input)
-	if err != nil {
-		switch err {
-		case service.ErrUsernameTaken,
-			service.ErrEmailTaken:
-			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
-		default:
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		}
-		return
-	}
+    // FIX: Mengirim alamat memori (&input)
+    userResp, err := h.authService.Register(&input) 
+    
+    if err != nil {
+        switch err {
+        case service.ErrUsernameTaken,
+             service.ErrEmailTaken:
+             c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+        default:
+             c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+        }
+        return
+    }
 
-	c.JSON(http.StatusCreated, userResp)
+    c.JSON(http.StatusCreated, userResp)
 }
 
 func (h *AuthHandler) Login(c *gin.Context) {
